--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <ul class="list-group history"></ul>
             </aside>
-            <!-- Forecast displays -->
+            <!-- Forecast displays ... -->
             <div class="col-lg-9">
                 <div id="today" class="mt-3"></div>
                 <div id="forecast" class="mt-3"></div>
